Поправил структуру проекта. Обновил .gitignore. Исправил замечания с ревью.